# ascii-art-generator

./: .gitignore  CMakeLists.txt  README.md
ascii-cli/: CMakeLists.txt
ascii-lib/: CMakeLists.txt
ascii-lib/cmake/: ascii-lib-config.cmake.in
ascii-lib/src/ascii/Ascii/: AsciiGenerator.hpp  Default_AsciiGenerator.cpp
ascii-lib/src/ascii/Image/: Color.hpp  Image.cpp  Image.hpp
ascii-lib/src/ascii/Image/Scaling/: AveragingImageScaler.cpp  AveragingImageScaler.hpp  ImageScaler.hpp
ascii-lib/src/common/Ascii/: AsciiGenerator.hpp  Default_AsciiGenerator.cpp  Default_AsciiGenerator.hpp
ascii-lib/src/common/Image/: AveragingImageScaler.cpp  AveragingImageScaler.hpp  Color.hpp  Image.cpp  Image.hpp  ImageScaler.hpp
ascii-lib/src/common/Image/Scaling/: AveragingImageScaler.cpp  AveragingImageScaler.hpp  ImageScaler.hpp
tests/: CMakeLists.txt
tests/ascii-lib/AsciiGenerator/: test_DefaultAsciiGenerator.cpp
tests/ascii-lib/Image/: test_Image.cpp
tests/ascii-lib/ImageScaler/: test_ImageScaler.cpp
